--- a/scss/main.css
+++ b/scss/main.css
@@ -312,4 +312,79 @@ template {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Roboto", Arial, sans-serif;
+}
+
+.Container {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px 60px;
+  background-color: rgb(115, 124, 190);
+}
+
+form {
+  width: 80%;
+}
+
+input {
+  line-height: 1.7em;
+}
+
+.Survey-head {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  justify-content: center;
+  background: transparent;
+  font-size: 16px;
+}
+
+.Survey-article {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  height: 80%;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+}
+.Survey-article-title {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.Survey-article-content {
+  display: flex;
+  margin-top: 25px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  align-items: center;
+}
+.Survey-article-content-qn {
+  display: flex;
+  width: 40%;
+  padding-right: 10px;
+  justify-content: flex-end;
+}
+.Survey-article-content-ans {
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+}
+.Survey-article-content-ans select {
+  width: 50%;
+}
+.Survey-article-content-ans input {
+  width: 70%;
+}
+.Survey-article-content-ans-radio {
+  padding-bottom: 10px;
+}
+.Survey-article-content-ans-radio input {
+  width: auto;
 }/*# sourceMappingURL=main.css.map */
