--- a/scss/config/_variable.scss
+++ b/scss/config/_variable.scss
@@ -1,5 +1,8 @@
 $max-width: 900px;
 $gutter: 20px;
+$item-width: 80%;
+$button-radius: 50px;
 //
+$color-main: rgb(115, 124, 190);
 $font-family: 'Roboto', Arial, sans-serif;
 $font-size: 16px;
