--- a/scss/helper/_global.scss
+++ b/scss/helper/_global.scss
@@ -13,7 +13,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     padding: 0 $gutter $gutter*3;
-    background-color: rgb(115, 124, 190);
+    background-color: $color-main;
 }
 
 form {
@@ -21,7 +21,46 @@ form {
 }
 
 input {
-    line-height: 1.7em;
+    line-height: 1.9em;
+    border-radius: 5px;
+    border-style: solid;
+
+    &:focus {
+        outline: none;
+        border-radius: 5px;
+        border-color: #719ECE;
+        border-width: 3px;
+    }
+}
+
+textarea {
+    border-radius: 5px;
+
+    &:focus {
+        outline: none;
+        border-radius: 5px;
+        border-color: #719ECE;
+        border-width: 3px;
+    }
+}
+
+select {
+    border-radius: 5px;
+
+    &:focus {
+        outline: none;
+        border-radius: 5px;
+        border-color: #719ECE;
+        border-width: 3px;
+    }
+}
+
+.submit {
+    width: auto;
+    border: 0;
+    padding: 3px;
+    border-radius: $button-radius;
+    background-color: $color-main;
 }
 
 
