--- a/scss/main.css
+++ b/scss/main.css
@@ -331,7 +331,43 @@ form {
 }
 
 input {
-  line-height: 1.7em;
+  line-height: 1.9em;
+  border-radius: 5px;
+  border-style: solid;
+}
+input:focus {
+  outline: none;
+  border-radius: 5px;
+  border-color: #719ECE;
+  border-width: 3px;
+}
+
+textarea {
+  border-radius: 5px;
+}
+textarea:focus {
+  outline: none;
+  border-radius: 5px;
+  border-color: #719ECE;
+  border-width: 3px;
+}
+
+select {
+  border-radius: 5px;
+}
+select:focus {
+  outline: none;
+  border-radius: 5px;
+  border-color: #719ECE;
+  border-width: 3px;
+}
+
+.submit {
+  width: auto;
+  border: 0;
+  padding: 3px;
+  border-radius: 50px;
+  background-color: rgb(115, 124, 190);
 }
 
 .Survey-head {
@@ -348,6 +384,8 @@ input {
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
   width: 90%;
   height: 80%;
   flex-direction: column;
@@ -355,15 +393,13 @@ input {
   background-color: white;
 }
 .Survey-article-title {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 .Survey-article-content {
   display: flex;
   margin-top: 25px;
-  padding-top: 5px;
-  padding-bottom: 5px;
   align-items: center;
+  justify-content: center;
 }
 .Survey-article-content-qn {
   display: flex;
@@ -374,17 +410,33 @@ input {
 .Survey-article-content-ans {
   display: flex;
   width: 60%;
+  padding-left: 10px;
   flex-direction: column;
 }
 .Survey-article-content-ans select {
   width: 50%;
+  height: 1.9em;
+  padding: 4px;
 }
 .Survey-article-content-ans input {
-  width: 70%;
+  width: 80%;
+  padding: 4px;
+}
+.Survey-article-content-ans textarea {
+  padding: 4px;
+  width: 80%;
+  height: 150px;
+  resize: none;
 }
 .Survey-article-content-ans-radio {
   padding-bottom: 10px;
 }
 .Survey-article-content-ans-radio input {
+  width: auto;
+}
+.Survey-article-content-ans-checkbox {
+  padding-bottom: 10px;
+}
+.Survey-article-content-ans-checkbox input {
   width: auto;
 }/*# sourceMappingURL=main.css.map */
