--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -12,6 +12,8 @@
     display: flex;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 90%;
     height: 80%;
     flex-direction: column;
@@ -19,16 +21,14 @@
     background-color: white;
 
     &-title {
-        margin-top: $gutter;
-        margin-bottom: $gutter;
+        margin-bottom: $gutter/2;
     }
 
     &-content {
         display: flex;
         margin-top: 25px;
-        padding-top: 5px;
-        padding-bottom: 5px;
         align-items: center;
+        justify-content: center;
 
         &-qn {
             display: flex;
@@ -40,17 +40,36 @@
         &-ans {
             display: flex;
             width: 60%;
+            padding-left: 10px;
             flex-direction: column;
             
             select {
                 width: 50%;
+                height: 1.9em;
+                padding: 4px;
             }
 
             input {
-                width: 70%;
+                width: $item-width;
+                padding: 4px;
+            }
+
+            textarea {
+                padding: 4px;
+                width: $item-width;
+                height: 150px;
+                resize: none;
             }
 
             &-radio {
+                padding-bottom: 10px;
+
+                input {
+                    width: auto;
+                }
+            }
+
+            &-checkbox {
                 padding-bottom: 10px;
 
                 input {
